# fire_seed

./: .env.example  CMakeLists.txt  README.md  deploy.sh  index.html  requirements.txt  start.sh  stop.sh
agents/: __init__.py  adversarial_council.py  alchemist.py  archive_guardian.py  copy_trade_coordinator.py  council.py  data_ombudsman.py  dependency_sentinel.py  devils_advocate.py  diversity_enforcer.py  env_inspector.py  execution_auditor.py  extreme_rewards.py  godel_watcher.py  guardian.py  narrator.py  redundancy_auditor.py  security_awareness.py  sentinel.py  weight_calibrator.py  worldview.py
api/: deps.py  server.py  websocket_manager.py
api/middleware/: auth.py
api/routes/: admin.py  assistant.py  auth.py  dashboard_detail.py  multi_account.py  orders.py  ota.py  risk.py  status.py  strategy.py
config/: agent_rewards.yaml  auth.yaml  cloud_storage.yaml  human_constraints.yaml  multi_account.yaml  risk_limits.yaml  settings.yaml  slo.json  strategy_params.yaml  weights.yaml
core/: behavioral_logger.py  compute_scheduler.py  conditional_weight.py  context_isolator.py  continuous_position.py  copy_trading.py  daily_tasks.py  data_feed.py  engine.py  execution.py  lazy_evaluator.py  multi_tf_arbiter_v2.py  notifier.py  order_manager.py  perception.py  plugin_manager.py  risk_monitor.py  scorecard.py  self_check.py  state_machine.py
core/arena/: elo_system.py  tournament.py
core/federated/: privacy_aggregator.py
cpp/: bindings.cpp
cpp/common/: market_types.h
cpp/execution/: iceberg_slicer.cpp  twap_adaptive.cpp
cpp/learning/: ftrl_learner.cpp  vib_inference.cpp
cpp/monitoring/: hard_watcher.cpp
cpp/net/: af_xdp_recv.cpp  tcp_userstack.cpp  tcp_userstack.h
cpp/pool/: slab_allocator.h
cpp/risk/: evt_var.cpp  incremental_covar.cpp  jump_detector.cpp  realtime_guard.cpp
cpp/shared_memory/: shm_manager.cpp  shm_manager.h
cpp/shm/: flat_msg.h  ring_queue.h
cpp/simd/: vector_math.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  assistant.js  auth.js  dashboard.js
ghost/: mirror_traffic.py  shadow_manager.py  shadow_validator_v2.py  virtual_broker.py
ota/: health_check.py  updater.py
tests/test_agents/: test_adversarial_council.py  test_data_ombudsman.py  test_dependency_sentinel.py  test_execution_auditor.py  test_extreme_rewards.py  test_security_awareness.py  test_worldview.py
tests/test_core/: test_engine_agent_init.py
